--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "start": "node src/index.js"
+    "transpile": "webpack",
+    "prepublishOnly": "npm run transpile"
   },
   "bugs": {
     "url": "https://github.com/brianbancroft/functional-querystring/issues",
@@ -22,19 +23,12 @@
     "ramda": "^0.26.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
     "jest": "^24.5.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^2.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "react-dom": "^16.8.4",
-    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-cli": "^3.3.0"
   },
   "engines": {
     "node": ">=8.15.0"
